<resources>
    <string name="app_name">MyTasks</string>
    <string name="add_task">Add</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due date</string>
    <string name="example1">Hacer las compras</string>
    <string name="example2">Ir al gym</string>
    <string name="example3">Trabajar</string>
    <string name="select_date">select a date</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="login_google">Log in using Google</string>
    <string name="bar_title">MyTasks</string>
    <string name="no_tasks_message">Congrats! There are no tasks left.\n\nTo create a new task please use the + button below.</string>
    <string name="action_toggle_group">Group done tasks</string>

    <string name="web_client_id">692558155479-800k03813n3hand9nljrlnrtdnl4sens.apps.googleusercontent.com</string>
<!--    https://console.firebase.google.com/u/0/project/followapp-mytasks/authentication/providers?utm_source=studio-->
     <string name="ad_unit_id">ca-app-pub-5163472824682213~4420222935</string>  <!--- FollowApp MyTasks ID -->
<!--    <string name="ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>  Banner test ID -->
<!--    <string name="ad_id">ca-app-pub-3940256099942544/9214589741</string>  Test AdMob ID, also in Constants -->
    <string name="ad_id">ca-app-pub-5163472824682213/1226263826</string>  <!-- Real Banner AdMob ID, also in Constants -->

    <string name="navigation_drawer_close">close</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="enter_a_title">Please enter a title</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="sort_z_a">Sort Z-A</string>
    <string name="asset_statements" translatable="false">
            [{
              \"include\": \"https://followapp-mytasks.web.app/.well-known/assetlinks.json\"
            }]
</string>
</resources>