<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <!-- LinearLayout to wrap EditText -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <!-- EditText to edit task title -->
        <EditText
            android:id="@+id/editTextTaskTitleDetail"
            style="@style/DetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="16dp" />

        <!--            android:textColor="@color/text"-->
        <!--            android:textColorHint="@color/hint"-->


        <!-- EditText to edit task description -->
        <EditText
            android:id="@+id/editTextTaskDescription"
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:hint="@string/description"
            android:inputType="text"
            android:padding="16dp" />

        <!-- Button to show the date picker -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxDone"
            style="@style/CustomCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

        <Button
            android:id="@+id/buttonShowDatePicker"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date" />

        <!-- Button to delete the task -->
        <Button
            android:id="@+id/buttonDeleteTask"
            style="@style/errorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <!-- Button to close the detail view -->
        <Button
            android:id="@+id/buttonCloseDetail"
            style="@style/outlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/close" />

        <!-- Button to save the task -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSaveTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/text_button" />

    </LinearLayout>

</LinearLayout>