<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- LinearLayout to wrap EditText -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- EditText to edit task title -->
        <EditText
            android:id="@+id/editTextTaskTitleDetail"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- LinearLayout to wrap EditText -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- EditText to edit task description -->
        <EditText
            android:id="@+id/editTextTaskDescription"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/description"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- LinearLayout to wrap EditText -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- EditText to edit task due date -->
        <EditText
            android:id="@+id/editTextDueDate"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:hint="@string/due_date"
            android:inputType="date"
            android:padding="16dp"
            android:textColor="@color/text"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Button to delete the task -->
    <Button
        android:id="@+id/buttonDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_task" />

    <!-- Button to close the detail view -->
    <Button
        android:id="@+id/buttonCloseDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close" />
</LinearLayout>